--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,19 +19,6 @@ jobs:
       matrix:
         # Set platforms you want to build your binaries on
         platform:
-          # Linux
-          - name: Linux x86_64
-            target: x86_64-unknown-linux-musl
-            build-args: "--release"
-
-          - name: Linux x86
-            target: i686-unknown-linux-musl
-            build-args: "--release"
-
-          - name: Linux aarch64
-            target: aarch64-unknown-linux-musl
-            build-args: "--release"
-
           - name: Linux armv7hf
             target: armv7-unknown-linux-musleabihf
             build-args: "--release"
@@ -40,57 +27,13 @@ jobs:
             target: arm-unknown-linux-musleabihf
             build-args: "--release"
 
-          - name: Freebsd x86_64
-            target: x86_64-unknown-freebsd
+          - name: Linux armv7
+            target: armv7-unknown-linux-musleabi
             build-args: "--release"
 
-          - name: Freebsd x86
-            target: i686-unknown-freebsd
+          - name: Linux arm
+            target: arm-unknown-linux-musleabi
             build-args: "--release"
-
-          - name: Android aarch64
-            target: aarch64-linux-android
-            build-args: "--release"
-
-          - name: Android armv7
-            target: armv7-linux-androideabi
-            build-args: "--release"
-
-          #- name: Linux mips
-          #  target: mips-unknown-linux-musl
-
-          #- name: Linux mips64
-          #  target: mips64-unknown-linux-muslabi64
-
-          # Mac OS
-          - name: MacOS x86_64
-            os: macos-latest
-            target: x86_64-apple-darwin
-            build-args: "--release"
-
-          - name: MacOS aarch64
-            os: macos-latest
-            target: aarch64-apple-darwin
-            build-args: "--release"
-
-          # - name: iOS x86_64
-          #   target: x86_64-apple-ios
-
-
-          #- name: iOS aarch64
-          #  target: aarch64-apple-ios
-
-
-          # Windows
-          - name: Windows x86_64
-            os: windows-latest
-            target: x86_64-pc-windows-msvc
-            build-args: "--profile release-with-symbols"
-
-          - name: Windows x86
-            os: windows-latest
-            target: i686-pc-windows-msvc
-            build-args: "--profile release-with-symbols"
 
     steps:
       - name: Install package for linux
