--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,6 +36,10 @@ jobs:
             target: armv7-unknown-linux-musleabihf
             build-args: "--release"
 
+          - name: Linux armhf
+            target: arm-unknown-linux-musleabihf
+            build-args: "--release"
+
           - name: Freebsd x86_64
             target: x86_64-unknown-freebsd
             build-args: "--release"
